syntax = "proto3";

package awakari.conditions.text;

option go_package = "./api/grpc/conditions_text";

service Service {

  rpc Create(CreateRequest) returns (CreateResponse);

  rpc LockCreate(LockCreateRequest) returns (LockCreateResponse);

  rpc UnlockCreate(UnlockCreateRequest) returns (UnlockCreateResponse);

  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
  string key = 1;
  string term = 2;
  bool exact = 3;
}

message CreateResponse {
  string id = 1;
  string term = 2;
}

message LockCreateRequest {
  string id = 1;
}

message LockCreateResponse {
}

message UnlockCreateRequest {
  string id = 1;
}

message UnlockCreateResponse {
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
}
