syntax = "proto3";

package matchers;

option go_package = "./api/grpc/matchers";

message MatcherData {
  string key = 1;
  bytes patternCode = 2;
}
